--- a/download.html
+++ b/download.html
@@ -6,6 +6,6 @@
     <title>OTA Download</title>
 </head>
 <body>
-    <a href="itms-services://?action=download-manifest&url=https://github.com/patrickleonardus/ota-downloader/releases/download/v1/manifest.plist">Download App</a>
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/patrickleonardus/ota-downloader/main/manifest.plist">Download App</a>
 </body>
 </html>
