--- a/download.html
+++ b/download.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTA Download</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+        .download-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        .download-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .download-button:hover {
+            background-color: #0056b3;
+        }
+        .icon-image {
+            width: 100px; /* Adjust the size as needed */
+            height: 100px; /* Adjust the size as needed */
+        }
+    </style>
 </head>
 <body>
-    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/patrickleonardus/ota-downloader/main/manifest.plist">Download App</a>
+    <div class="download-container">
+        <img src="https://github.com/patrickleonardus/ota-downloader/releases/download/v1/icon.png" alt="App Icon" class="icon-image">
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/patrickleonardus/ota-downloader/main/manifest.plist" class="download-button">
+            Download App
+        </a>
+    </div>
 </body>
 </html>
