--- a/download.html
+++ b/download.html
@@ -75,10 +75,17 @@
         <div class="changelog">
             <div class="changelog-title">Changelog</div>
             <div class="changelog-version">
+                <div class="changelog-title">v1.0.2:</div>
+                <ul>
+                    <li>Add haloBCA mobile (equal to v2.2.1)</li>
+                    <li>Add keyBCA Revamp</li>
+                </ul>
+            </div>
+            <div class="changelog-version">
                 <div class="changelog-title">v1.0.1:</div>
                 <ul>
                     <li>Add Gebyar BCA, Oneklik enhancement, Flazz enhancement and RIPLAY to BCA mobile (equal to v4.3.1)</li>
-                    <li>Add Gebyar BCA, World Wide Banking to myBCA (equal to v.1.23.0)</li>
+                    <li>Add Gebyar BCA, World Wide Banking to myBCA (equal to v.1.22.0)</li>
                     <li>Bug Fix in myBCA (Fix local storage issue and login use case).</li>
                 </ul>
             </div>
